--- a/src/api/Internal.Audit/Internal.Audit.Api/Internal.Audit.Api.csproj
+++ b/src/api/Internal.Audit/Internal.Audit.Api/Internal.Audit.Api.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Internal.Audit.Application\Internal.Audit.Application.csproj" />
+    <ProjectReference Include="..\Internal.Audit.Infrastructure.Data\Internal.Audit.Infrastructure.Data.csproj" />
+  </ItemGroup>
+
 </Project>
