--- a/src/api/Internal.Audit/Internal.Audit.Infrastructure.Data/Internal.Audit.Infrastructure.Data.csproj
+++ b/src/api/Internal.Audit/Internal.Audit.Infrastructure.Data/Internal.Audit.Infrastructure.Data.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Internal.Audit.Application\Internal.Audit.Application.csproj" />
+  </ItemGroup>
+
 </Project>
