--- a/src/api/Internal.Audit/Internal.Audit.Api/appsettings.json
+++ b/src/api/Internal.Audit/Internal.Audit.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "InternalAuditDb": "Data Source=192.168.97.27,1440;Initial Catalog=InternalAuditDb;User ID=sa;Password=oLdViCtOrY2008;TrustServerCertificate=True;"
+  }
 }
