--- a/src/api/Internal.Audit/Internal.Audit.Infrastructure.Persistent/Internal.Audit.Infrastructure.Persistent.csproj
+++ b/src/api/Internal.Audit/Internal.Audit.Infrastructure.Persistent/Internal.Audit.Infrastructure.Persistent.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Internal.Audit.Application\Internal.Audit.Application.csproj" />
+    <ProjectReference Include="..\Internal.Audit.Domain\Internal.Audit.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
