--- a/src/api/Internal.Audit/Internal.Audit.Api/appsettings.json
+++ b/src/api/Internal.Audit/Internal.Audit.Api/appsettings.json
@@ -1,12 +1,52 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "InternalAuditDb": "Data Source=192.168.97.27,1440;Initial Catalog=InternalAuditDb;User ID=sa;Password=oLdViCtOrY2008;TrustServerCertificate=True;"
+  },
+  "CustomLog": {
+    "LogRequest": true
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.File", "Serilog.Sinks.MSSqlServer" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "../logs/IA-API-.log",
+          "rollingInterval": "Day"
+        }
+      },
+      {
+        "Name": "MSSqlServer",
+        "Args": {
+          "connectionString": "Data Source=192.168.97.27,1440;Initial Catalog=InternalAuditDb;User ID=sa;Password=oLdViCtOrY2008;TrustServerCertificate=True;",
+          "sinkOptionsSection": {
+            "tableName": "EventLog",
+            "schemaName": "log",
+            "autoCreateSqlTable": true,
+            "batchPostingLimit": 1000,
+            "period": "0.00:00:30"
+          }
+        }
+      }
+    ]
+  },
+  "MailSettings": {
+    "Smtp": "smtp.gmail.com",
+    "Port": 587,
+    "UserEmail": "mymail@gmail.com",
+    "Password": "mypassword",
+    "DefaultSender": "admin.ia@asa-international.com",
+    "UserCreationMail": {
+      "Subject": "",
+      "Body": ""
+    }
   }
 }
