--- a/src/api/Internal.Audit/Internal.Audit.Api/appsettings.json
+++ b/src/api/Internal.Audit/Internal.Audit.Api/appsettings.json
@@ -4,7 +4,9 @@
     "InternalAuditDb": "Data Source=192.168.97.27,1440;Initial Catalog=InternalAuditDb;User ID=sa;Password=oLdViCtOrY2008;TrustServerCertificate=True;"
   },
   "CustomLog": {
-    "LogRequest": true
+    "LogRequest": true,
+    "LogPeformance": true,
+    "RequestElapsedThresholdTimeInMilliseconds": 10000
   },
   "Serilog": {
     "Using": [ "Serilog.Sinks.File", "Serilog.Sinks.MSSqlServer" ],
