--- a/src/api/Internal.Audit/Internal.Audit.Api/appsettings.json
+++ b/src/api/Internal.Audit/Internal.Audit.Api/appsettings.json
@@ -3,6 +3,12 @@
   "ConnectionStrings": {
     "InternalAuditDb": "Data Source=192.168.97.27,1440;Initial Catalog=InternalAuditDb;User ID=sa;Password=oLdViCtOrY2008;TrustServerCertificate=True;"
   },
+  "Api": {
+    "Version": {
+      "Major": 1,
+      "Minor": 0
+    }
+  },
   "CustomLog": {
     "LogRequest": true,
     "LogPeformance": true,
