--- a/src/api/Internal.Audit/Internal.Audit.Api/appsettings.json
+++ b/src/api/Internal.Audit/Internal.Audit.Api/appsettings.json
@@ -9,6 +9,11 @@
       "Minor": 0
     }
   },
+  "Jwt": {
+    "Key": "cEAStewNgwTdo2k5Y75qa",
+    "Issuer": "jwt",
+    "ExpiryMinutes": 2400
+  },
   "CustomLog": {
     "LogRequest": true,
     "LogPeformance": true,
