--- a/src/api/Internal.Audit/Internal.Audit.Application/Internal.Audit.Application.csproj
+++ b/src/api/Internal.Audit/Internal.Audit.Application/Internal.Audit.Application.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="FluentValidation" Version="10.4.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="10.4.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.16.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
   </ItemGroup>
 
