--- a/src/api/Internal.Audit/Internal.Audit.Api/appsettings.json
+++ b/src/api/Internal.Audit/Internal.Audit.Api/appsettings.json
@@ -11,7 +11,7 @@
   },
   "Jwt": {
     "Key": "cEAStewNgwTdo2k5Y75qa",
-    "Issuer": "jwt",
+    "Issuer": "https://localhost:7049/",
     "ExpiryMinutes": 2400
   },
   "CustomLog": {
