committed with mail send functionality added

--- a/src/api/Internal.Audit/Internal.Audit.Api/appsettings.json
+++ b/src/api/Internal.Audit/Internal.Audit.Api/appsettings.json
@@ -58,8 +58,8 @@
     "Password": "mypassword",
     "DefaultSender": "admin.ia@asa-international.com",
     "UserCreationMail": {
-      "Subject": "",
-      "Body": ""
+      "Subject": "Internal Audit: Access Granted!",
+      "Body": "&lt;p&gt;Dear ##NAME##&lt;/p&gt;&lt;P&gt;Welcome to ASAI Internal Audit System!&lt;/p&gt;&lt;P&gt;Regards, &lt;/p&gt;&lt;P&gt;Team Internal Audit.&lt;/p&gt;"
     }
   }
 }
