--- a/src/app/internal-audit/package.json
+++ b/src/app/internal-audit/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
     "@datorama/akita": "^7.1.1",
+    "@datorama/akita-ng-router-store": "^7.0.0",
+    "@datorama/akita-ngdevtools": "^7.0.0",
     "crypto-js": "^4.1.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
