--- a/src/api/Internal.Audit/Internal.Audit.Domain/Internal.Audit.Domain.csproj
+++ b/src/api/Internal.Audit/Internal.Audit.Domain/Internal.Audit.Domain.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Entities\pac\" />
+    <Folder Include="Entities\ProcessAndControlAudit\" />
   </ItemGroup>
 
 </Project>
