--- a/src/api/Internal.Audit/Internal.Audit.Application/Internal.Audit.Application.csproj
+++ b/src/api/Internal.Audit/Internal.Audit.Application/Internal.Audit.Application.csproj
@@ -20,4 +20,12 @@
     <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\Designation\Commands\DeleteDesignation\" />
+    <Folder Include="Features\Designation\Commands\UpdateDesignation\" />
+    <Folder Include="Features\Designation\Queries\GetDesignationList\" />
+    <Folder Include="Features\Designation\Queries\GetDesignationById\" />
+    <Folder Include="Features\Designation\Queries\" />
+  </ItemGroup>
+
 </Project>
