--- a/src/api/Internal.Audit/Internal.Audit.Application/Internal.Audit.Application.csproj
+++ b/src/api/Internal.Audit/Internal.Audit.Application/Internal.Audit.Application.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <Folder Include="Features\Designation\Queries\GetDesignationById\" />
+    <Folder Include="Features\UserCountries\Quiries\" />
   </ItemGroup>
 
 </Project>
