Add, Put for access privilege(password, session, user locking policy)

--- a/src/api/Internal.Audit/Internal.Audit.Application/Internal.Audit.Application.csproj
+++ b/src/api/Internal.Audit/Internal.Audit.Application/Internal.Audit.Application.csproj
@@ -21,6 +21,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Features\AccessPrivilege\Commands\DeleteAccessPrivilege\" />
+    <Folder Include="Features\AccessPrivilege\Queries\" />
     <Folder Include="Features\Designation\Queries\GetDesignationById\" />
     <Folder Include="Features\UserCountries\Quiries\" />
   </ItemGroup>
