--- a/src/ui/internal-audit/tsconfig.json
+++ b/src/ui/internal-audit/tsconfig.json
@@ -13,7 +13,6 @@
     "sourceMap": true,
     "declaration": false,
     "downlevelIteration": true,
-    "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "es2017",
@@ -21,13 +20,15 @@
     "lib": [
       "es2020",
       "dom"
-    ]
+    ],
+    "experimentalDecorators": true,
+    "allowJs": true
   },
   "angularCompilerOptions": {
+    "strictInputAccessModifiers": false,
+    "strictTemplates": false,
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": false,
-    "strictInputAccessModifiers": false,
-    "strictTemplates": false
   },
   "files": [],
   "references": [
