--- a/src/ui/internal-audit/package.json
+++ b/src/ui/internal-audit/package.json
@@ -41,6 +41,7 @@
     "@fullcalendar/timegrid": "^5.11.0",
     "chart.js": "^3.7.1",
     "date-fns": "^2.28.0",
+    "ng-recaptcha": "^9.0.0",
     "ngx-perfect-scrollbar": "^10.1.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
