--- a/src/ui/internal-audit/package.json
+++ b/src/ui/internal-audit/package.json
@@ -39,6 +39,7 @@
     "@fullcalendar/interaction": "^5.11.0",
     "@fullcalendar/list": "^5.11.0",
     "@fullcalendar/timegrid": "^5.11.0",
+    "@nrwl/angular": "14.1.9",
     "chart.js": "^3.7.1",
     "date-fns": "^2.28.0",
     "ng-recaptcha": "^9.0.0",
@@ -52,6 +53,8 @@
     "@angular/cli": "~13.3.0",
     "@angular/compiler-cli": "~13.3.0",
     "@angular/localize": "~13.3.0",
+    "@nrwl/nx-cloud": {},
+    "@nrwl/workspace": "14.1.9",
     "@types/google.maps": "^3.48.3",
     "@types/jasmine": "~4.0.3",
     "@types/node": "^16.11.29",
@@ -61,6 +64,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "nx": "14.1.9",
     "typescript": "~4.6.3"
   },
   "engines": {
