--- a/src/api/Internal.Audit/Internal.Audit.Infrastructure.Persistent/Internal.Audit.Infrastructure.Persistent.csproj
+++ b/src/api/Internal.Audit/Internal.Audit.Infrastructure.Persistent/Internal.Audit.Infrastructure.Persistent.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Repositories\UserCommandRepository.cs" />
+    <Compile Remove="Repositories\UserQueryRepository.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.123" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.3" />
   </ItemGroup>
