--- a/src/api/Internal.Audit/Internal.Audit.Application/Internal.Audit.Application.csproj
+++ b/src/api/Internal.Audit/Internal.Audit.Application/Internal.Audit.Application.csproj
@@ -36,6 +36,7 @@
 
   <ItemGroup>
     <Folder Include="Features\Designation\Queries\GetDesignationById\" />
+    <Folder Include="Features\UserRegistration\Commands\UpdateUserRegistration\" />
   </ItemGroup>
 
 </Project>
