Unit test for IA-28 initial

--- a/src/api/Internal.Audit/Internal.Audit.Application/Internal.Audit.Application.csproj
+++ b/src/api/Internal.Audit/Internal.Audit.Application/Internal.Audit.Application.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Features\Designation\Queries\GetDesignationById\**" />
+    <EmbeddedResource Remove="Features\Designation\Queries\GetDesignationById\**" />
+    <None Remove="Features\Designation\Queries\GetDesignationById\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Internal.Audit.Domain\Internal.Audit.Domain.csproj" />
   </ItemGroup>
 
@@ -21,7 +27,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Features\Designation\Queries\GetDesignationById\" />
     <Folder Include="Features\UserCountries\Quiries\" />
   </ItemGroup>
 
