--- a/src/ui/internal-audit/package.json
+++ b/src/ui/internal-audit/package.json
@@ -48,6 +48,7 @@
     "ng-recaptcha": "^9.0.0",
     "ngx-perfect-scrollbar": "^10.1.1",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.4.18",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
