--- a/src/ui/internal-audit/package.json
+++ b/src/ui/internal-audit/package.json
@@ -39,6 +39,8 @@
     "@fullcalendar/interaction": "^5.11.0",
     "@fullcalendar/list": "^5.11.0",
     "@fullcalendar/timegrid": "^5.11.0",
+    "@ngneat/hot-toast": "^4.1.0",
+    "@ngneat/overview": "^3.0.0",
     "angular-datatables": "^13.1.0",
     "chart.js": "^3.7.1",
     "datatables.net": "^1.11.3",
