--- a/src/ui/internal-audit/package.json
+++ b/src/ui/internal-audit/package.json
@@ -49,6 +49,7 @@
     "jquery": "^3.6.0",
     "ng-recaptcha": "^9.0.0",
     "ngx-perfect-scrollbar": "^10.1.1",
+    "ngx-ui-loader": "^13.0.0",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.4.18",
     "tslib": "^2.3.0",
