EF pagination done

--- a/src/api/Internal.Audit/Internal.Audit.Api/appsettings.json
+++ b/src/api/Internal.Audit/Internal.Audit.Api/appsettings.json
@@ -1,7 +1,7 @@
 {
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "InternalAuditDb": "Data Source=192.168.97.27,1440;Initial Catalog=InternalAuditDb;User ID=sa;Password=oLdViCtOrY2008;TrustServerCertificate=True;"
+    "InternalAuditDb": "Data Source=DESKTOP-MAG0PI4;Initial Catalog=InternalAuditDb;User ID=sa;Password=nahian99;TrustServerCertificate=True;"
   },
   "ReCaptchaV3Key": "6Lfmr4AgAAAAAI8iRzvjrKSOThNKu_NWmKV0cP3J",
   "Api": {
