--- a/src/api/Internal.Audit/Internal.Audit.Application/Internal.Audit.Application.csproj
+++ b/src/api/Internal.Audit/Internal.Audit.Application/Internal.Audit.Application.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Features\TopicHeads\Commands\DeleteTopicHead\" />
     <Folder Include="Features\UserCountries\Quiries\" />
   </ItemGroup>
 
