IA-86 getall source done wokring on Documentupload api

--- a/src/api/Internal.Audit/Internal.Audit.Application/Internal.Audit.Application.csproj
+++ b/src/api/Internal.Audit/Internal.Audit.Application/Internal.Audit.Application.csproj
@@ -47,6 +47,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Features\Documents\Commands\DeleteDocumentCommand\" />
+    <Folder Include="Features\Documents\Commands\UpdateDocumentCommand\" />
+    <Folder Include="Features\Documents\Queries\" />
     <Folder Include="Features\UserCountries\Quiries\" />
   </ItemGroup>
 
