--- a/src/api/Internal.Audit/Internal.Audit.Application/Internal.Audit.Application.csproj
+++ b/src/api/Internal.Audit/Internal.Audit.Application/Internal.Audit.Application.csproj
@@ -18,6 +18,7 @@
   <ItemGroup>
     <Compile Remove="Contracts\Persistent\IUserCommandRepository.cs" />
     <Compile Remove="Contracts\Persistent\IUserQueryRepository.cs" />
+    <Compile Remove="Features\AuditFrequencies\Commands\AddAuditFrequency\AddAuditFrequencyCommandValidator.cs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -49,6 +50,10 @@
 
   <ItemGroup>
     <Folder Include="Features\UserCountries\Quiries\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Features\AuditFrequencies\Commands\AddAuditFrequency\AddAuditFrequencyCommandValidator.cs" />
   </ItemGroup>
 
 </Project>
