--- a/src/api/Internal.Audit/Internal.Audit.Api/appsettings.json
+++ b/src/api/Internal.Audit/Internal.Audit.Api/appsettings.json
@@ -68,6 +68,6 @@
     }
   },
   "Broker": {
-    "BrokerAddress": "amqp://guest:guest@localhost:5672"    
+    "BrokerAddress": "amqp://guest:guest@192.168.97.24:5672"    
   }
 }
