Seed added for common value

--- a/src/api/Internal.Audit/Internal.Audit.Consumer.Service/App.config
+++ b/src/api/Internal.Audit/Internal.Audit.Consumer.Service/App.config
@@ -8,8 +8,8 @@
 		<add key="log.file" value="log.log" />
 		<add key="log.entity" value="GH"/>
 		<add key="serviceName" value="GHservice"/>
-		<add key="brokerQueue" value="Zambia-IA" />
-    <add key="baseApi" value="https://localhost:7049" />
+		<add key="brokerQueue" value="Bulgeria-IA" />
+    <add key="baseApi" value="http://192.168.97.56:9999" />
     <add key="ApiUrl" value="/api/v1/DataSync" />
 	</appSettings>
 	<connectionStrings>
