User Password Reset Work completed

--- a/src/api/Internal.Audit/Internal.Audit.Api/appsettings.json
+++ b/src/api/Internal.Audit/Internal.Audit.Api/appsettings.json
@@ -56,12 +56,13 @@
       }
     ]
   },
+  "ClientApplicationHost": "http://localhost:4200/#/",
   "MailSettings": {
-    "Smtp": "smtp.gmail.com",
+    "Smtp": "smtp-mail.outlook.com",
     "Port": 587,
-    "UserEmail": "mymail@gmail.com",
-    "Password": "mypassword",
-    "DefaultSender": "admin.ia@asa-international.com",
+    "UserEmail": "ambssqlnotif@asa-international.com",
+    "Password": "AMBS~!@SQL@20Dhk",
+    "DefaultSender": "ambssqlnotif@asa-international.com",
     "UserCreationMail": {
       "Subject": "Internal Audit: Access Granted!",
       "Body": "&lt;p&gt;Dear ##NAME##&lt;/p&gt;&lt;P&gt;Welcome to ASAI Internal Audit System!&lt;/p&gt;&lt;P&gt;Regards, &lt;/p&gt;&lt;P&gt;Team Internal Audit.&lt;/p&gt;"
