Consumer updated for windows service

--- a/src/api/Internal.Audit/Internal.Audit.Consumer.Service/Internal.Audit.Consumer.Service.csproj
+++ b/src/api/Internal.Audit/Internal.Audit.Consumer.Service/Internal.Audit.Consumer.Service.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{85F78248-B034-4DC1-A032-09ED026804B5}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <RootNamespace>Internal.Audit.Consumer.Service</RootNamespace>
     <AssemblyName>Internal.Audit.Consumer.Service</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
