--- a/src/api/Internal.Audit/Internal.Audit.Api/appsettings.Development.json
+++ b/src/api/Internal.Audit/Internal.Audit.Api/appsettings.Development.json
@@ -1,8 +1,85 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+  {
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft.AspNetCore": "Warning"
+      }
     }
   }
-}
+
+
+  {
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+      "InternalAuditDb": "Data Source=192.168.97.27,1440;Initial Catalog=InternalAuditDb;User ID=sa;Password=oLdViCtOrY2008;TrustServerCertificate=True;"
+    },
+    "GoogleReCaptcha": {
+      "V2SecretKey": "6LdcoxohAAAAADHUCPu3aXv9omZ5W2IgjYTXtzAw",
+      "VerificationUrl": "https://www.google.com/recaptcha/api/siteverify"
+    },
+    "ReCaptchaV2Key": "",
+    "Api": {
+      "Version": {
+        "Major": 1,
+        "Minor": 0
+      }
+    },
+    "Jwt": {
+      "Key": "cEAStewNgwTdo2k5Y75qa",
+      "Issuer": "https://localhost:7049/",
+      "ExpiryMinutes": 2400
+    },
+    "CustomLog": {
+      "LogRequest": true,
+      "LogPeformance": true,
+      "RequestElapsedThresholdTimeInMilliseconds": 10000
+    },
+    "Serilog": {
+      "Using": [ "Serilog.Sinks.File", "Serilog.Sinks.MSSqlServer" ],
+      "MinimumLevel": {
+        "Default": "Information",
+        "Override": {
+          "Microsoft": "Warning",
+          "System": "Warning"
+        }
+      },
+      "WriteTo": [
+        {
+          "Name": "File",
+          "Args": {
+            "path": "../logs/IA-API-.log",
+            "rollingInterval": "Day"
+          }
+        },
+        {
+          "Name": "MSSqlServer",
+          "Args": {
+            "connectionString": "Data Source=192.168.97.27,1440;Initial Catalog=InternalAuditDb;User ID=sa;Password=oLdViCtOrY2008;TrustServerCertificate=True;",
+            "sinkOptionsSection": {
+              "tableName": "EventLog",
+              "schemaName": "log",
+              "autoCreateSqlTable": true,
+              "batchPostingLimit": 1000,
+              "period": "0.00:00:30"
+            }
+          }
+        }
+      ]
+    },
+    "ClientApplicationHost": "http://localhost:4200/#/",
+    "MailSettings": {
+      "Smtp": "smtp-mail.outlook.com",
+      "Port": 587,
+      "UserEmail": "ambssqlnotif@asa-international.com",
+      "Password": "AMBS~!@SQL@20Dhk",
+      "DefaultSender": "ambssqlnotif@asa-international.com",
+      "UserCreationMail": {
+        "Subject": "Internal Audit: Access Granted!",
+        "Body": "&lt;p&gt;Dear ##NAME##&lt;/p&gt;&lt;P&gt;Welcome to ASAI Internal Audit System!&lt;/p&gt;&lt;P&gt;Regards, &lt;/p&gt;&lt;P&gt;Team Internal Audit.&lt;/p&gt;"
+      }
+    },
+    "Broker": {
+      "BrokerAddress": "amqp://guest:guest@192.168.97.24:5672"
+    }
+  }
