audit schedule configuration owner added

--- a/src/api/Internal.Audit/Internal.Audit.Application/Internal.Audit.Application.csproj
+++ b/src/api/Internal.Audit/Internal.Audit.Application/Internal.Audit.Application.csproj
@@ -49,6 +49,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Features\AuditScheduleConfigurationsOwner\Commands\DeleteAuditScheduleConfigurationsOwnerCommand\" />
+    <Folder Include="Features\AuditScheduleConfigurationsOwner\Queries\" />
     <Folder Include="Features\DataRequestQueue\Command\UpdateDataRequestQueueCommand\" />
     <Folder Include="Features\RiskAssesmentDataManagements\Queries\" />
     <Folder Include="Features\UserCountries\Quiries\" />
