IA-351-back end Innitial

--- a/src/api/Internal.Audit/Internal.Audit.Application/Internal.Audit.Application.csproj
+++ b/src/api/Internal.Audit/Internal.Audit.Application/Internal.Audit.Application.csproj
@@ -7,12 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Contracts\Persistent\NewFolder\**" />
     <Compile Remove="Features\NotificationToAuditees\Command\**" />
     <Compile Remove="Features\UserCountries\**" />
     <Compile Remove="Features\Users\**" />
+    <EmbeddedResource Remove="Contracts\Persistent\NewFolder\**" />
     <EmbeddedResource Remove="Features\NotificationToAuditees\Command\**" />
     <EmbeddedResource Remove="Features\UserCountries\**" />
     <EmbeddedResource Remove="Features\Users\**" />
+    <None Remove="Contracts\Persistent\NewFolder\**" />
     <None Remove="Features\NotificationToAuditees\Command\**" />
     <None Remove="Features\UserCountries\**" />
     <None Remove="Features\Users\**" />
@@ -52,7 +55,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Contracts\Persistent\NewFolder\" />
     <Folder Include="Features\AuditScheduleConfigurationsOwner\Commands\DeleteAuditScheduleConfigurationsOwnerCommand\" />
     <Folder Include="Features\DataRequestQueue\Command\UpdateDataRequestQueueCommand\" />
     <Folder Include="Features\RiskAssesmentDataManagements\Queries\" />
